--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-
+.page-banner{
+  font-family: Monospace;
+  font-size: 25px;
+  color: white;
+}
+            
+body{
+  background-color:black;
+}
