--- a/style.css
+++ b/style.css
@@ -1,25 +1,29 @@
-.page-banner{
-    font-family: Monospace;
-    font-size: 25px;
-    color: white;
-}
-              
+    
 body{
     background-color:#051e08;
     margin:0;
     padding:20px;
 }
 
+.list {
+    list-style-type: none;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 2vw;
+    margin: 0;
+}
+
 .text{
     color:#00FF00;
     font-family: Monospace;
-    font-size: 20px;
+    font-size: 2vw;
 }
 
 .button {
-    font-size:32px;
-    line-height:40px;
-    margin:5px;
+    font-size: 3.5vw;
+    line-height: 4vw;
+    margin: .5vw;
+    padding-left: .6vw;
     cursor: default;
 }
 
@@ -50,50 +54,68 @@ a {
     text-decoration: none;
 }
 
-a:hover {
+.active:hover {
     color:#051e08;
     background-color:#00FF00;
 }
 
 .indent {
-    margin-left: 30px;
-    line-height: 20px;
+    margin-left: 2vw;
+    margin-top: .5vw;
+    padding-top: .1vw;
+    line-height: .8vw;
+}
+
+.terminal{
+    font-size: 2.5vw;
+    color:#00FF00;
+    font-family: Monospace;
+}
+
+#page {
+    margin: left;
+    width: 100%;
+    border: none;
+    max-width: 1000px;
 }
 
 #footer{
     position: absolute;
     bottom: 0;
-    width: 100%;
-    height: 40px;
+    height: 5vw;
     padding-bottom: 50px;
-    padding-top: 50px;
-    min-height: 50px;
+    padding-top: 5vw;
+    min-height: 25px;
     clear:both;
+    border: none;
 }
 
-.keyText{
-    font-size: 24px;
-    color:#00FF00;
-    font-family: Monospace;
+#about{padding-right:300px;}
+
+#projects{padding-right:323px;}
+
+#contact{padding-right:342px;}
+
+#resume{padding-right:341px;}
+
+#divider1{
+    font-size:.01vw; line-height:2vw;
+    border: none;
 }
-
-#about{padding-right:450px;}
-
-#projects{padding-right:373px;}
-
-#contact{padding-right:392px;}
-
-#resume{padding-right:411px;}
 
 #textart{
     color:#00FF00;
     font-family: 'Courier New', Courier, monospace;
-    line-height:8px;
+    line-height:50%;
+    margin: auto;
+    font-size: 1.7vw;
+    padding-left: 1%;
+    padding-right: 1%;
+    border: none;
 }
 
 #field{
-    font-size: 28px;
-    color:#00FF00;
+    
     font-family: Monospace;
 }
 
@@ -103,8 +125,8 @@ a:hover {
     right: -10px;
     display: inline-block;
     background-color: #00FF00;
-    width: 10px;
-    height: 24px;
+    width: 1vw;
+    height: 2vw;
     -webkit-animation: blink 1s step-end infinite;
     animation: blink 1s step-end infinite;
 }
@@ -120,3 +142,27 @@ a:hover {
     50% { opacity: 0.0; }
     100% { opacity: 1.0; }
 }
+
+@media screen and (min-width: 1000px) {
+    #textart {
+       font-size: 17px;
+    }
+    .button {
+        font-size: 35px;
+        line-height: 40px;
+        margin: 5px;
+        padding-left: 6px;
+    }
+    .text {
+        font-size: 20px;
+    }
+    .indent {
+        margin-left: 20px;
+        margin-top: 5px;
+        padding-top: 1px;
+        line-height: 8px;
+    }
+    .terminal{
+        font-size: 25px;
+    }
+  }
