--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-
+    font-size: 17px;
     resize: none;
 }
 
@@ -237,3 +237,4 @@ a {
     }
     
   }
+
