--- a/clock.css
+++ b/clock.css
@@ -5,19 +5,34 @@ body {
 .text {
     /*font-family: Arial, Helvetica, sans-serif;*/
     font-family: "Lucida Console", Monaco, monospace;
-    font-size: 300%;
+    font-size: 10vw;
     color: #383838;
+    margin:0vw;
 }
 
-.text-lit {
-    font-family: "Lucida Console", Monaco, monospace;
-    font-size: 300%;
+.lit {
     color: white;
 }
 
-.x16 {
-    /*font-family: Arial, Helvetica, sans-serif;*/
-    font-family: "Lucida Console", Monaco, monospace;
-    font-size: 200%;
-    color: black;
+#content {
+    /*border: 1px solid gray;*/
+    text-align: center;
+    display: inline-block;
+}
+
+.smallText {
+    font-size: 8vw
+}
+
+#main {
+    text-align: center;
+}
+
+@media screen and (min-width: 500px) {
+    .text{
+        font-size: 50px;
+    }
+    .smallText{
+        font-size: 40px;
+    }
 }
